# crawler_publications

./: README.md  pyproject.toml
biorxiv/: crawl_download_pdf.py  crawl_extract_metadata_csv.py  user_agents.json
tests/: test_crawl_download_pdf.py  test_crawl_extract_metadata_csv.py
