[tool.poetry]
name = "biorxiv crawler"
version = "0.1.0"
description = ""
authors = ["Tek Raj Chhetri <tekraj@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "biorxiv"
]